create online order section

--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 body {
     margin: 0;
+    background-color: white;
 }
+
+.order-section {
+    max-width: 1920px;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 150px;
+    /* border: 1px solid red; */
+}
+
 
 header {
     max-width: 1920px;
@@ -28,4 +38,32 @@ nav ul {
     display: flex;
     gap: 30px;
     color: white;
+}
+
+
+.heading {
+    width:250px;margin: 0 auto;
+    text-align: center;
+    font-size: 25px;
+    border-top: 2px solid #c4c3c3;
+    border-bottom: 2px solid #c4c3c3;
+}
+
+.order-image-container{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+}
+
+.order-image{
+    position: relative;
+    text-align: center;
+}
+
+.order-image p{
+    position: absolute;
+    bottom: 0;
+    color: white;
+    left: 40%;
+    font-size: 20px;
 }
