--- a/style.css
+++ b/style.css
@@ -40,30 +40,92 @@ nav ul {
     color: white;
 }
 
+nav img {
+    width: 40px;
+    height: 40px;
+    display: none;
+}
+
 
 .heading {
-    width:250px;margin: 0 auto;
+    width: 250px;
+    margin: 0 auto;
     text-align: center;
     font-size: 25px;
     border-top: 2px solid #c4c3c3;
     border-bottom: 2px solid #c4c3c3;
 }
 
-.order-image-container{
+.order-image-container {
     display: flex;
     justify-content: space-between;
     padding-top: 50px;
 }
 
-.order-image{
+.order-image {
     position: relative;
     text-align: center;
 }
 
-.order-image p{
+.order-image p {
     position: absolute;
     bottom: 0;
     color: white;
     left: 40%;
     font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 801px) and (max-width:1200px) {
+    header {
+        height: 640px;
+    }
+}
+
+
+
+
+
+
+/* TABLET RESPONSIVE */
+@media (min-width: 501px) and (max-width: 800px) {
+    header {
+        height: 450px;
+    }
+
+    nav ul {
+        display: none;
+    }
+
+    nav img{
+        display: block;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+/* MOBILE RESPONSIVE */
+@media (max-width:500px) {
+    header {
+        height: 300px;
+    }
 }
