--- a/style.css
+++ b/style.css
@@ -22,6 +22,21 @@ body {
 }
 
 
+button {
+    padding: 14px 38px;
+    color: #BF8C15;
+    background-color: #E8E8E8;
+    border: none;
+    border-bottom: 2px solid #BF8C15;
+    border-radius: 7px;
+    margin-top: 40px;
+}
+
+button:hover {
+    background-color: #1F2937;
+   border-bottom: 2px solid #1F2937;
+}
+
 
 header {
     max-width: 1920px;
