--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 }
 
 .order-section,
-.form-menu {
+.form-menu,
+.call-us {
     max-width: 1920px;
     width: 80%;
     margin: 0 auto;
@@ -34,7 +35,7 @@ button {
 
 button:hover {
     background-color: #1F2937;
-   border-bottom: 2px solid #1F2937;
+    border-bottom: 2px solid #1F2937;
 }
 
 
@@ -128,6 +129,16 @@ nav img {
     color: #BF8C15;
 }
 
+.call-us {
+    height: 230px;
+    background-color: #151515;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 35px;
+}
+
 
 
 
@@ -171,6 +182,10 @@ nav img {
     .menu-card-container {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .call-us {
+        font-size: 25px;
+    }
 }
 
 
@@ -184,6 +199,13 @@ nav img {
 
 /* MOBILE RESPONSIVE */
 @media (max-width:500px) {
+
+    .order-section,
+    .form-menu,
+    .call-us {
+        width: 90%;
+    }
+
     header {
         height: 300px;
     }
@@ -194,6 +216,11 @@ nav img {
 
     nav img {
         display: block;
+    }
+
+    .heading{
+        font-size: 15px;
+        width: 190px;
     }
 
     .order-image-container {
@@ -222,4 +249,8 @@ nav img {
         font-size: 20px;
     }
 
+    .call-us {
+        font-size: 12px;
+        height: 150px;
+    }
 }
