--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
 
 .order-section,
 .form-menu,
-.call-us {
+.call-us,.chef-recommends {
     max-width: 1920px;
     width: 80%;
     margin: 0 auto;
-    margin-top: 150px;
+    margin-top: 180px;
     /* border: 1px solid red; */
 }
 
